--- a/newyear/templates/newyear/index.html
+++ b/newyear/templates/newyear/index.html
@@ -1,10 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
 <title>New Year</title>
+<link href=" {% static 'newyear/style.css' %}" rel="stylesheet">
 </head>
 <body>
-
     {% if newyear %}
         <h1>Yes</h1>
     {% else %}
